--- a/index.html
+++ b/index.html
@@ -7,17 +7,46 @@
     <title>MemOps</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <div id="Board">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+        <img src="img/2e51935e7f894b05a766dd8865626ee1.png" alt="" width="100" height="100">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <div class="nav-link active">
+                    <label id="minutes">00</label>:<label id="seconds">00</label>
+                </div>
+              </li>
+              <li class="nav-item">
+                <div class="nav-link active">
+                    <label >Score:</label><label id="score">00</label>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <div  style="width: 100%; overflow: hidden;">
+        <div class="d-flex flex-column flex-shrink-0 min-vh-100 p-3 text-white bg-dark" style="float: right;">
+        </div>
+        <div class="d-flex flex-column flex-shrink-0 min-vh-100 p-3 text-white bg-dark" style="float: left;">
+        </div>
+        <div id="Board" class="p-2" style="float: center;">
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
         <script type="module" src="js/Card.js"></script>
         <script type="module" src="js/CardGenerator.js"></script>
+        <script type="module" src="js/timer.js"></script>
 
         
     
